refactor: update code for Java 11 compatibility